# narcissus

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/narcissus-cluster/: Cargo.toml  README.md
crates/narcissus-cluster/benches/: kmeans_bench.rs
crates/narcissus-cluster/examples/: cross_validate.rs
crates/narcissus-cluster/src/: config.rs  elkan.rs  error.rs  inertia.rs  init.rs  kmeans.rs  label.rs  lib.rs  minibatch.rs  result.rs  silhouette.rs
crates/narcissus-cluster/tests/: accuracy_regression.rs
crates/narcissus-dtw/: Cargo.toml  README.md
crates/narcissus-dtw/benches/: dtw_bench.rs
crates/narcissus-dtw/src/: constraint.rs  dba.rs  distance.rs  dtw.rs  envelope.rs  error.rs  lib.rs  matrix.rs  path.rs  preprocess.rs  series.rs  ssg.rs
crates/narcissus-dtw/tests/: accuracy_regression.rs
crates/narcissus-io/: Cargo.toml
crates/narcissus-io/src/: align.rs  attribute_reader.rs  domain.rs  error.rs  lib.rs  reader.rs  writer.rs
crates/narcissus-io/tests/: pipeline.rs
crates/narcissus-io/tests/fixtures/: duplicate_ids.csv  empty.csv  inf.csv  jagged.csv  malformed.csv  nan.csv  valid_1x4.csv  valid_6x12.csv
crates/narcissus-rf/: Cargo.toml  README.md
crates/narcissus-rf/benches/: rf_bench.rs
crates/narcissus-rf/examples/: cross_validate_sklearn.rs
crates/narcissus-rf/src/: config.rs  confusion.rs  error.rs  eval.rs  forest.rs  histogram.rs  importance.rs  lib.rs  node.rs  oob.rs  perm_importance.rs  predict.rs  result.rs  serialize.rs  split.rs  tree.rs
crates/narcissus-rf/tests/: accuracy_regression.rs
cross_val/: generate_references.py  generate_rf_references.py  pyproject.toml  reference.json  rf_reference.json
docs/: userguide.md
scripts/: bump-version.sh
src/: main.rs
