[package]
name = "narcissus-cluster"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "K-means clustering with DTW distance metric"

[dependencies]
narcissus-dtw = { path = "../narcissus-dtw" }

thiserror = "2"
tracing = "0.1"
rayon = "1"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
