[package]
name = "narcissus-dtw"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DTW distance computation and DBA barycenter averaging"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
rayon = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dtw_bench"
harness = false
