[package]
name = "narcissus-rf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Random Forest classification: train, evaluate, predict"

[dependencies]
thiserror = "2"
tracing = "0.1"
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[dev-dependencies]
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"

[[bench]]
name = "rf_bench"
harness = false
